Fixed styling error on form only visible on chrome.

--- a/css/style.css
+++ b/css/style.css
@@ -523,7 +523,7 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  min-height: 47.125em; }
+  min-height: 45.3125em; }
 
 /* line 16, ../../../Documents/Netmatters/Portfolio/scss/sections/_contact.scss */
 .contact__title {
