--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -8,7 +8,7 @@
         text-align: center;
         background-image: url(../img/nebula.jpg);
         @include background-image-styles();
-        min-height: em(754px);
+        min-height: em(725px);
     }
 
     // Section title "Contact Form"
